--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="dialog_exit_message">Android Web Server is currently running. If you exit the application we will stop it. Are sure you want to exit the application?</string>
     <string name="warning">Warning</string>
     <string name="wifi_message">You must connect to a WiFi network to use this service.</string>
+    <string name="required_field_error">Field is required</string>
 </resources>
